@@ -31,6 +31,7 @@ requires:
   Mo::utils: 0.14
   Mo::utils::CSS: 0
   Readonly: 0
+  Scalar::Util: 0
   perl: 5.8.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Data-HTML-Element/issues
